[package]
name = "pdf_grabber"
version = "0.1.0"
authors = ["Doyko <benjamin.bihanic@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.9", features = ["blocking"]}
regex = "1.4.2"
serde_json = "1.0"