[package]
name = "pdf_grabber"
version = "0.1.0"
authors = ["Doyko <benjamin.bihanic@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.5.2"
log = "0.4.11"
log4rs = "0.13.0"
reqwest = {version = "0.10.9", features = ["blocking"]}
regex = "1.4.2"
serde_json = "1.0"